remove files name in image links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#contact" class="navbar-link contact-link">Contact</a></li>
             </ul>
         </nav>
-        <img src="image/r.png" alt="logo" class="logo">
+        <img src="r.png" alt="logo" class="logo">
     </header>
     <!-- ********************* main section ******************* -->
     <main>
@@ -62,10 +62,10 @@
                 <!--*********************** right side******************* -->
                 <div class="hero-image">
                     <picture>
-                        <source srcset="image/1614618585241-webp.webp" type="image/webp">
-                        <source srcset="image/1614618585241-compressed.JPG" type="image/jpg">
-                        <source srcset="image/1614618585241.JPG" type="image/jpg">
-                        <img src="image/1614618585241-compressed.jpg" alt="this is me Zeeshan Raza ." class="hero-img">
+                        <source srcset="1614618585241-webp.webp" type="image/webp">
+                        <source srcset="1614618585241-compressed.JPG" type="image/jpg">
+                        <source srcset="1614618585241.JPG" type="image/jpg">
+                        <img src="1614618585241-compressed.jpg" alt="this is me Zeeshan Raza ." class="hero-img">
                     </picture>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     communicator with strong team and co-ordination skills.</p>
             </div>
             <div class="about-image">
-                <img src="./image/IMG_20220607_184717_685.jpg" alt="About Us">
+                <img src="IMG_20220607_184717_685.jpg" alt="About Us">
             </div>
         </div>
     </section>
@@ -91,7 +91,7 @@
     <section class="skills section " id="skill">
         <div class="container grid grid-two-column">
             <div class="skill-image">
-                <img class="lazy-img" src="image/zee-min.jpg" data-src="image/zee.jpg" alt="technical skill image"
+                <img class="lazy-img" src="zee-min.jpg" data-src="zee.jpg" alt="technical skill image"
                     loading="lazy" />
             </div>
             <div class="tech-skill">
@@ -171,12 +171,12 @@
                     management groups in India.</p>
             </div>
             <div class="academics-image">
-                <img src="./image/tec.jpg" alt="Academics">
+                <img src="tec.jpg" alt="Academics">
             </div>
         </div>
         <div class="academic-wrapper grid grid-two-column container">
             <div class="academics-image">
-                <img src="./image/sjvss.jpg" alt="Academics">
+                <img src="sjvss.jpg" alt="Academics">
             </div>
             <div class="academics-text">
                 <h2 class="common-heading">higher Secondry / 12th</h2>
@@ -212,7 +212,7 @@
                     weather road. In this school academic session starts in January.</p>
             </div>
             <div class="academics-image">
-                <img src="./image/pmhs.jpeg" alt="Academics">
+                <img src="pmhs.jpeg" alt="Academics">
             </div>
         </div>
     </section>
@@ -228,28 +228,28 @@
         </div>
         <div class="container grid grid-three-column project-image">
             <div class="img-overlay p-btn--1 p-btn--2 ">
-                <img src="image/pexels-dmitry-demidov-3774606.jpg" alt="food resturant">
+                <img src="pexels-dmitry-demidov-3774606.jpg" alt="food resturant">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/drum-kit/" target="_foodresturant"
                         class="common-heading">Drum-Kit</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
-                <img src="image/pexels-min-an-1629212.jpg" alt="notes app">
+                <img src="pexels-min-an-1629212.jpg" alt="notes app">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/to-do-note-app/" target="_notes"
                         class="common-heading">notes app</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 p-btn--2 ">
-                <img src="image/header-image2.jpg" alt="food resturant">
+                <img src="header-image2.jpg" alt="food resturant">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/food_resturant/" target="_foodresturant"
                         class="common-heading">food resturant</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 p-btn--2 ">
-                <img src="image/travel-image3.jpg" alt="travell site">
+                <img src="travel-image3.jpg" alt="travell site">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/Travel_site/" target="_travel" class="common-heading">travel
                         site</a>
