portfolio img change

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
-                <img src="pexels-min-an-1629212.jpg" alt="notes app">
+                <img src="pexels-ron-lach-9462970.jpg" alt="notes app">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/portfolio/" target="_notes"
                         class="common-heading">portfolio</a>
