--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
             <div class="about-text">
                 <h2 class="common-heading">About</h2>
                 <p>I am Zeeshan Raza , a hard-working engineering under-graduate specializing in Information Technology
-                    at Techno International New Town with overall cgpa of 9.29.Along with my academics I had completed
-                    HTML,CSS,JavaScript courses from Coursera.I have keen knowledge of Java,DBMS,Networking.
-                    I have a hobby of swimming.Currently in Final year, B.Tech,Information Technology.An effective
+                    at Techno International New Town with overall cgpa of 9.08.Along with my academics I had completed
+                    HTML, CSS, JavaScript courses from Coursera.I have keen knowledge of Java, MySQL, ReactJs.
+                    I have a hobby of swimming.Currently I am exploring new technology.An effective
                     communicator with strong team and co-ordination skills.</p>
             </div>
             <div class="about-image">
@@ -222,15 +222,16 @@
             <h2 class="common-heading">projects</h2>
         </div>
         <div class="p-btns">
-            <div class="btn p-btn " data-btn-num="1">website</div>
+            
             <div class="btn p-btn " data-btn-num="2">projects</div>
+            <div class="btn p-btn " data-btn-num="1">website</div>
             <div class="btn p-btn " data-btn-num="3">apps</div>
         </div>
         <div class="container grid grid-three-column project-image">
             <div class="img-overlay p-btn--1 p-btn--2 ">
                 <img src="pexels-dmitry-demidov-3774606.jpg" alt="food resturant">
                 <div class="overlay">
-                    <a href="https://raza-zeeshan.github.io/drum-kit/" target="_foodresturant"
+                    <a href="https://raza-zeeshan.github.io/drum-kit/" target="_drum"
                         class="common-heading">Drum-Kit</a>
                 </div>
             </div>
@@ -242,9 +243,16 @@
                 </div>
             </div>
             <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
+                <img src="pexels-min-an-1629212.jpg" alt="notes app">
+                <div class="overlay">
+                    <a href="https://raza-zeeshan.github.io/Digital-Watch/" target="_watch"
+                        class="common-heading">notes app</a>
+                </div>
+            </div>
+            <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
                 <img src="pexels-ron-lach-9462970.jpg" alt="notes app">
                 <div class="overlay">
-                    <a href="https://raza-zeeshan.github.io/portfolio/" target="_notes"
+                    <a href="https://raza-zeeshan.github.io/portfolio/" target="_portfolio"
                         class="common-heading">portfolio</a>
                 </div>
             </div>
@@ -269,15 +277,15 @@
     <section class="section work-data">
         <div class="container grid grid-three-column">
             <div>
-                <h2 class="counter-number" data-number="8">0+</h2>
+                <h2 class="counter-number" data-number="20">0+</h2>
                 <p>project completed</p>
             </div>
             <div>
-                <h2 class="counter-number" data-number="80">0+</h2>
+                <h2 class="counter-number" data-number="150">0+</h2>
                 <p>codes</p>
             </div>
             <div>
-                <h2 class="counter-number" data-number="20">0+</h2>
+                <h2 class="counter-number" data-number="50">0+</h2>
                 <p>friends</p>
             </div>
 
@@ -289,7 +297,7 @@
         <div class="container">
             <h2>I am <span>available</span> for Intern or Fulltime role</h2>
             <p>
-                Information Technology | Front-End | Web-Developer
+                Information Technology | Front-End | Web-Developer | Automation Test
             </p>
             <a href="#contact" class="btn">HIRE ME</a>
         </div>
@@ -341,7 +349,7 @@
         <div class="container grid grid-three-column">
             <div class="f-about">
                 <h3>About</h3>
-                <p>A web-developer specialized in front-end as well as back-end development.</p>
+                <p>A web-developer specialized in front-end as well as back-end development and  also a good Automation Test Engineer .</p>
             </div>
             <div class="f-links">
                 <h3>Links</h3>
