--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
         </div>
         <div class="p-btns">
             
-            <div class="btn p-btn " data-btn-num="2">projects</div>
-            <div class="btn p-btn " data-btn-num="1">website</div>
-            <div class="btn p-btn " data-btn-num="3">apps</div>
+            <div class="btn p-btn " data-btn-num="2">All Projects</div>
+            <div class="btn p-btn " data-btn-num="1">Web Projects</div>
+            <div class="btn p-btn " data-btn-num="3">Java Projects</div>
         </div>
         <div class="container grid grid-three-column project-image">
             <div class="img-overlay p-btn--1 p-btn--2 ">
@@ -242,11 +242,11 @@
                         class="common-heading">notes app</a>
                 </div>
             </div>
-            <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
-                <img src="pexels-min-an-1629212.jpg" alt="notes app">
+            <div class="img-overlay p-btn--1 p-btn--2">
+                <img src="watch.jpg" alt="digital watch">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/Digital-Watch/" target="_watch"
-                        class="common-heading">notes app</a>
+                        class="common-heading">Digital Watch</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
@@ -470,3 +470,4 @@
 </body>
 
 </html>
+
