--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                 <img src="pexels-min-an-1629212.jpg" alt="notes app">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/to-do-note-app/" target="_notes"
-                        class="common-heading">notes app</a>
+                        class="common-heading">Notes App</a>
                 </div>
             </div>
             <div class="img-overlay p-btn--1 p-btn--2">
-                <img src="watch.jpg" alt="digital watch">
+                <img src="watch1.jpg" alt="digital watch">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/Digital-Watch/" target="_watch"
                         class="common-heading">Digital Watch</a>
@@ -470,4 +470,5 @@
 </body>
 
 </html>
+
 
