--- a/index.html
+++ b/index.html
@@ -229,6 +229,13 @@
         </div>
         <div class="container grid grid-three-column project-image">
             <div class="img-overlay p-btn--1 p-btn--2 ">
+                <img src="https://www.freecodecamp.org/news/content/images/size/w2000/2024/04/Screenshot-2024-04-10-at-7.27.44-AM.png" alt="todo react app">
+                <div class="overlay">
+                    <a href="https://to-app-do.netlify.app/" target="_todo"
+                        class="common-heading">To-Do App</a>
+                </div>
+            </div>
+            <div class="img-overlay p-btn--1 p-btn--2 ">
                 <img src="pexels-dmitry-demidov-3774606.jpg" alt="food resturant">
                 <div class="overlay">
                     <a href="https://raza-zeeshan.github.io/drum-kit/" target="_drum"
@@ -470,5 +477,6 @@
 </body>
 
 </html>
+
 
 
