--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
                         class="common-heading">Drum-Kit</a>
                 </div>
             </div>
+            <div class="img-overlay p-btn--1 p-btn--2 ">
+                <img src="stwatch.jpg" alt="stop watch">
+                <div class="overlay">
+                    <a href="https://spwtch.netlify.app/" target="_stpwatch"
+                        class="common-heading">Stop Watch</a>
+                </div>
+            </div>
             <div class="img-overlay p-btn--3 p-btn--1 p-btn--2">
                 <img src="pexels-min-an-1629212.jpg" alt="notes app">
                 <div class="overlay">
@@ -477,6 +484,7 @@
 </body>
 
 </html>
+
 
 
 
