--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </div>
         <div class="container grid grid-three-column project-image">
             <div class="img-overlay p-btn--1 p-btn--2 ">
-                <img src="https://www.freecodecamp.org/news/content/images/size/w2000/2024/04/Screenshot-2024-04-10-at-7.27.44-AM.png" alt="todo react app">
+                <img src="960x0.jpg" alt="todo react app">
                 <div class="overlay">
                     <a href="https://to-app-do.netlify.app/" target="_todo"
                         class="common-heading">To-Do App</a>
@@ -484,6 +484,7 @@
 </body>
 
 </html>
+
 
 
 
